CB-22683 Improve AWS getLatestPreWarmedImageByRuntimeVersion method with RHEL8 condition
Our AWS E2E `testSDXMultiRepairIDBRokerAndMasterWithRecipeFile` is constantly failing since RHEL8 images are part of the `PROD` image catalog. So we should improve the related method to can filter the latest RHEL8 and CENTOS7 images as well.